# arc-agi-3-misfit-agent

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tier1-badge.json
dataset/: README.md  dataset-metadata.json
docs/: BLACK_MAMBA_SCOPE_v1.md  CHARTER_PUBLIC_SUMMARY.md  CHARTER_v1.md  COMPETITOR_INTEL.md  CONSTITUTION_v1.md  FOUNDING_ADJUDICATION_v1.md  HANDOFF_GEMINI_CONSIGLIERE.md  HANDOFF_HEAVY_REVIEWER.md  HUNDRED_DAY_PLAN.md  INNOVATIONS_WAVE_4_THROUGH_9.md  KAGGLE_DISCUSSION_POST.md  LAKESTRIKE_REVIEW_V4.md  MANIFESTO.md  PAPER_DRAFT.md  PAPER_v0.md  PAPER_v1.md  PAPER_v2_CHARTER_DELIVERY.md  PRESS_KIT.md  TIER1_BADGE_SPEC.md  TIER_1_DISCLOSURE.md
notebooks/: arc2_submission.ipynb  kernel-metadata.json  submission.ipynb
paper-track/: DRAFT_v1.md  PTCG_STRATEGY_WRITEUP_v1.md
scripts/: ablate_resonance.py  analyze_arc2_coverage.py  build_notebook.py  eval_arc2_public.py  full_eval_measurement.py  measure_arc2.py  measure_arc2_dsl.py  run_founding_adjudication.py  sign_charter.py  tier1_badge_verify.py  verify_notebook.py  wave10_eval_diagnostic.py  wave11_preflight.py  wave12_13_preflight.py  wave14_preflight.py  wave16_compose_preflight.py
tests/: test_ablate_resonance.py  test_abstain_policy.py  test_action6_mutation_safety.py  test_arc2_solver.py  test_charter_signing.py  test_click_quantizer.py  test_dsl_arc2_integration.py  test_dsl_arc3_adapter.py  test_dsl_ast.py  test_dsl_e2e.py  test_dsl_eval.py  test_dsl_foreach_object.py  test_dsl_if_color.py  test_dsl_if_shape.py  test_dsl_mask_by.py  test_dsl_mdl.py  test_dsl_parallel.py  (+20 more)
(+192 files in other folders)
